Curve Render bug in Blender Internal Render. #37940

Closed
opened 2013-12-25 10:34:15 +01:00 by Danyang Yi · 9 comments

System Information
win7 sp1 64bit

Blender Version
Blender 2.69.0 AND 2.69.7 Hash: 4b206af

Short description of error
Curve Extrude Object Render(BI) Bug [cycles ok]
Check snapshot and blend-file in attachments. Please.

Exact steps for others to reproduce the error
[BI]
1 Import SVG-file
2 Extrude and Bevel
3 Set material
4 Render and return the problem.

But The problem seems didn't in Object. Cuz Cycles has a right result.

I found that if set a Subsurf Modify on curve object.
BI can get right result as A temp solution.
Hope BF can make it better.

Thanks for your great work!
Best wishes.

Curve_Render_bug_in_Blender_Internal_Render..jpg

Curve_Render_bug_in_Blender_Internal_Render..blend

**System Information** win7 sp1 64bit **Blender Version** Blender 2.69.0 **AND** 2.69.7 Hash: 4b206af **Short description of error** Curve Extrude Object Render(BI) Bug [cycles ok] Check snapshot and blend-file in attachments. Please. **Exact steps for others to reproduce the error** [BI] 1 Import SVG-file 2 Extrude and Bevel 3 Set material 4 Render and return the problem. But The problem seems didn't in Object. Cuz Cycles has a right result. I found that if set a Subsurf Modify on curve object. BI can get right result as A temp solution. Hope BF can make it better. Thanks for your great work! Best wishes. ![Curve_Render_bug_in_Blender_Internal_Render..jpg](https://archive.blender.org/developer/F56179/Curve_Render_bug_in_Blender_Internal_Render..jpg) [Curve_Render_bug_in_Blender_Internal_Render..blend](https://archive.blender.org/developer/F56181/Curve_Render_bug_in_Blender_Internal_Render..blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yang2018

Added subscriber: @yang2018

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Author

News report.
After apply(ctrl+a) scale. BI can return the right result.

Is there a precision problem in BI or Bug?

Thanks.

News report. After apply(ctrl+a) scale. BI can return the right result. Is there a precision problem in BI or Bug? Thanks.
Sergey Sharybin self-assigned this 2014-01-17 12:44:09 +01:00

There were some precision issues here i've fixed in the past. Will look into this one.

There were some precision issues here i've fixed in the past. Will look into this one.

This issue was referenced by blender/blender-addons-contrib@1c8abf8d2a

This issue was referenced by blender/blender-addons-contrib@1c8abf8d2a809b00210a2c555ec2d4b4a8c0c419

This issue was referenced by 1c8abf8d2a

This issue was referenced by 1c8abf8d2a809b00210a2c555ec2d4b4a8c0c419

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1c8abf8d2a.

Closed by commit 1c8abf8d2a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37940
No description provided.